--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndoridBasicApps">
-        <activity android:name=".DetailActivity"></activity>
+        <activity android:name=".ThirdActivity"></activity>
+        <activity android:name=".ResultActivity" />
+        <activity android:name=".SecondActivity" />
+        <activity android:name=".DetailActivity" />
         <activity android:name=".FirstActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
