--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndoridBasicApps">
-        <activity android:name=".ThirdActivity"></activity>
+        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".ThirdActivity" />
         <activity android:name=".ResultActivity" />
         <activity android:name=".SecondActivity" />
         <activity android:name=".DetailActivity" />
